# agents-course

./: .gitignore  0_workflow.py  1_agent.py  2_memory_retrieval.py  3_multi_agents.py  4_evals.py  README.md  _0_workflow.py  _1.1_tools.py  _1_agent.py  _1_workflow.py  _2_agent.py  _2_memory_retrieval.py  _3_agents_sdk.py  _3_memory_retrieval.py  _3_multi_agents.py  _4_evals.py  _4_multi_agents.py  _4_multi_agents_demo.py  _4_simple_evals.py  _5.1_simple_evals.py  _5.2_evals.py  _5_simple_evals.py  _6_mcp.py  clean.sh  config.py  eval_utils.py  pyproject.toml  requirements.txt  sample_vector_store_memory.txt  utils.py
sample_files/: favorite_songs.txt
